--- a/index.html
+++ b/index.html
@@ -5,4 +5,7 @@
     <title>Platformer</title>
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
+  <body>
+    
+  </body>
 </html>
