--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Platformer</title>
+    <title>ALOZR</title>
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    
+    <img src="character.png"/>
   </body>
 </html>
