--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <img src="character.png"/>
+    <img src="char (1).png"/>
   </body>
 </html>
