--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta name="viewport" content="width=device-width">
     <title>Unblocked RPG</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-    <img src="char (1).png"/>
+    </head>
+    <body>
+    <div id="pane">
+      <div id="box">
+        <img src="char (1).png"/>
+      </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
