--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     </head>
     <body>
     <div id="pane">
-      <div id="box">
-        <img src="char (1).png"/>
-      </div>
+      <img src="char (1).png" id="chara">
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="script.js"></script>
