--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta name="viewport" content="width=device-width">
     <title>Unblocked RPG</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     </head>
     <body>
     <div id="pane">
       <img src="char (1).png" id="chara">
     </div>
     <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   </body>
 </html>
