--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-    <div id="pane">
+    <div id="image-continer">
       <img src="char (1).png" id="chara">
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
