--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-<title></title>
+<title>Unblocked RPG</title>
 <style type="text/css">
 #img {
   position: absolute;
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <div id="img">hi</div>
+    <div id="img"><img src="char (1).png"/></div>
   </body>
 
 </html>
