--- a/index.html
+++ b/index.html
@@ -1,35 +1,19 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, inital-scale=1.0" />
     <title>Unblocked RPG</title>
-    <style type="text/css">
-      html {
-        background-image: url("bg.png");
-      }
-
-      #img {
-        position: absolute;
-      }
-
-    </style>
+    <link href="style.css" rel="stylesheet" type="text/css">
   </head>
-
   <body>
     <html>
-
       <head>
-
       </head>
-
       <body>
         <div id="img"><img src="char (1).png" /></div>
       </body>
-
     </html>
-
     <script type="text/javascript">
       (function() {
         var xAxis = 0
@@ -58,10 +42,8 @@
         };
 
       })();
-
     </script>
   </body>
-
 </html>
 
 
