--- a/index.html
+++ b/index.html
@@ -3,26 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-<title></title>
-<style type="text/css">
-#img {
-  position: absolute;
-  color: red;
-}
-
-body {
-  height: 100%;
-  overflow: hidden;
-  background-color: black;
-}
-
-#sword {
-  left: 100px;
-  top: 20px;
-  color: red;
-  position: absolute;
-}
-</style>
+<title>RPG Webgame Testing</title>
+<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <html>
