--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <head>
   </head>
   <body onload="SetUp();">
-    <div id="img">hi</div>
+    <div id="img"><img src="char (1).png"/></div>
     <div id="sword">this is an item</div>
   </body>
 </html>
@@ -83,8 +83,6 @@ document.onkeydown = function(event) {
 
 };
 //player movement code end
-
-
 })();
 </script>
 </body>
