--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body onload="SetUp();">
     <div id="img"><img src="char (1).png"/></div>
-    <div id="sword">this is an item</div>
+    <div id="sword"><img src="swordItem.png"/></div>
   </body>
 </html>
 
