--- a/index.html
+++ b/index.html
@@ -32,13 +32,9 @@ function DOMelementOverlapCheck(div1, div2) {
 }
 //assorted functions code end
 
-//set up position of objects code begin
+//assorted variable defenitions code begin
 const item = document.getElementById("sword")
-function SetUp() {
-item.style.left = 500 + 'px';
-item.style.top = 200 + 'px';
-}
-//set up position of objects code end
+//assorted variable defenitions code end
 
 //player movement code begin
 var xAxis = 0
