--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <html>
   <head>
   </head>
-  <body onload="SetUp();">
+  <body>
     <div id="img"><img src="char (1).png"/></div>
     <div id="sword"><img src="swordItem.png"/></div>
   </body>
