--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <head>
   </head>
   <body>
-    <div id="img"><img src="char (3).png"/></div>
+    <div id="img"><img src="char__3_-removebg-preview (1).png"/></div>
     <div id="sword"><img src="swordItem.png"/></div>
   </body>
 </html>
