--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id="img"><img src="char__3_-removebg-preview (1).png"/></div>
-    <div id="sword"><img src="swordItem.png"/></div>
+    <div id="sword"><img src="swordItem (1).png"/></div>
   </body>
 </html>
 
