--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ document.onkeydown = function(event) {
       div.style.left = xAxis + 'px';
       if (DOMelementOverlapCheck(item, div) === true)
       {
+        document.getElementById("img").src="char (4) (2).png";
       	console.log("DOM overlap detected");
       }
     break;
@@ -49,6 +50,7 @@ document.onkeydown = function(event) {
       div.style.top = yAxis + 'px';
       if (DOMelementOverlapCheck(item, div) === true)
       {
+        document.getElementById("img").src="char (4) (2).png";
       	console.log("DOM overlap detected");
       }
     break;
@@ -57,14 +59,16 @@ document.onkeydown = function(event) {
       div.style.left = xAxis + 'px';
       if (DOMelementOverlapCheck(item, div) === true)
       {
+        document.getElementById("img").src="char (4) (2).png";
       	console.log("DOM overlap detected");
       }
     break;
     case 40:
       yAxis += moveSpeed;
       div.style.top = yAxis + 'px';
- 			if (DOMelementOverlapCheck(item, div) === true)
+ 	  if (DOMelementOverlapCheck(item, div) === true)
       {
+        document.getElementById("img").src="char (4) (2).png";
       	console.log("DOM overlap detected");
       }
     break;
