--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ const item = document.getElementById("sword")
 //assorted variable defenitions code end
 
 //player movement code begin
-var xAxis = 0
-var yAxis = 0;
+var xAxis = 50;
+var yAxis = 10;
 const moveSpeed = 10;
 const div = document.getElementById('img');
 document.onkeydown = function(event) {
