--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ document.onkeydown = function(event) {
       div.style.left = xAxis + 'px';
       if (DOMelementOverlapCheck(item, div) === true)
       {
+        document.getElementById("sword").style.display='none';
         document.getElementById("imgEl").src="char (4) (2).png";
       	console.log("DOM overlap detected");
       }
@@ -50,6 +51,7 @@ document.onkeydown = function(event) {
       div.style.top = yAxis + 'px';
       if (DOMelementOverlapCheck(item, div) === true)
       {
+        document.getElementById("sword").style.display='none';
         document.getElementById("imgEl").src="char (4) (2).png";
       	console.log("DOM overlap detected");
       }
@@ -59,6 +61,7 @@ document.onkeydown = function(event) {
       div.style.left = xAxis + 'px';
       if (DOMelementOverlapCheck(item, div) === true)
       {
+        document.getElementById("sword").style.display='none';
         document.getElementById("imgEl").src="char (4) (2).png";
       	console.log("DOM overlap detected");
       }
@@ -68,6 +71,7 @@ document.onkeydown = function(event) {
       div.style.top = yAxis + 'px';
  	  if (DOMelementOverlapCheck(item, div) === true)
       {
+        document.getElementById("sword").style.display='none';
         document.getElementById("imgEl").src="char (4) (2).png";
       	console.log("DOM overlap detected");
       }
