--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="img"><img src="char__3_-removebg-preview (1).png" id="imgEl"/></div>
-    <div id="sword"><img src="swordItem (1).png" id="swordImg"/></div>
+    <div id="sword"><img src="swordSwordCollect (1).png" id="swordImg"/></div>
 <script type="text/javascript">
 (function() {
 //assorted functions code begin
@@ -26,7 +26,8 @@ function DOMelementOverlapCheck(div1, div2) {
 //assorted functions code end
 
 //assorted variable defenitions code begin
-const item = document.getElementById("sword")
+const SwordCollect = document.getElementById("sword")
+var SwordCollectCollected = false;
 //assorted variable defenitions code end
 
 //player movement code begin
@@ -39,8 +40,9 @@ document.onkeydown = function(event) {
     case 37:
       xAxis -= moveSpeed;
       div.style.left = xAxis + 'px';
-      if (DOMelementOverlapCheck(item, div) === true)
+      if (DOMelementOverlapCheck(SwordCollect, div) === true)
       {
+        SwordCollectCollected = true;
         document.getElementById("sword").style.display='none';
         document.getElementById("imgEl").src="char (4) (2).png";
       	console.log("DOM overlap detected");
@@ -49,8 +51,9 @@ document.onkeydown = function(event) {
     case 38:
       yAxis -= moveSpeed;
       div.style.top = yAxis + 'px';
-      if (DOMelementOverlapCheck(item, div) === true)
+      if (DOMelementOverlapCheck(SwordCollect, div) === true)
       {
+        SwordCollectCollected = true;
         document.getElementById("sword").style.display='none';
         document.getElementById("imgEl").src="char (4) (2).png";
       	console.log("DOM overlap detected");
@@ -59,8 +62,9 @@ document.onkeydown = function(event) {
     case 39:
       xAxis += moveSpeed;
       div.style.left = xAxis + 'px';
-      if (DOMelementOverlapCheck(item, div) === true)
+      if (DOMelementOverlapCheck(SwordCollect, div) === true)
       {
+        SwordCollectCollected = true;
         document.getElementById("sword").style.display='none';
         document.getElementById("imgEl").src="char (4) (2).png";
       	console.log("DOM overlap detected");
@@ -69,8 +73,9 @@ document.onkeydown = function(event) {
     case 40:
       yAxis += moveSpeed;
       div.style.top = yAxis + 'px';
- 	  if (DOMelementOverlapCheck(item, div) === true)
+ 	  if (DOMelementOverlapCheck(SwordCollect, div) === true)
       {
+        SwordCollectCollected = true;
         document.getElementById("sword").style.display='none';
         document.getElementById("imgEl").src="char (4) (2).png";
       	console.log("DOM overlap detected");
