--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="img"><img src="char__3_-removebg-preview (1).png" id="imgEl"/></div>
-    <div id="sword"><img src="swordSwordCollect (1).png" id="swordImg"/></div>
+    <div id="sword"><img src="swordItem (1).png" id="swordImg"/></div>
 <script type="text/javascript">
 (function() {
 //assorted functions code begin
