--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <div><img src="portal.png"/></div>
     <div id="img"><img src="char__3_-removebg-preview (1).png" id="imgEl"/></div>
     <div id="sword"><img src="swordItem (1).png" id="swordImg"/></div>
 <script type="text/javascript">
