--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="LevelTransfer"><img src="portal.png"/></div>
     <div id="img"><img src="char__3_-removebg-preview (1).png" id="imgEl"/></div>
     <div id="sword"><img src="swordItem (1).png" id="swordImg"/></div>
+    <button onclick="">press me</button>
 <script type="text/javascript">
 (function() {
 //assorted functions code begin
@@ -23,6 +24,10 @@ function DOMelementOverlapCheck(div1, div2) {
     domRect1.bottom < domRect2.top ||
     domRect1.left > domRect2.right
   );
+}
+
+function OtherPage() {
+    self.location="part2.html";
 }
 //assorted functions code end
 
