--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="LevelTransfer"><img src="portal.png"/></div>
     <div id="img"><img src="char__3_-removebg-preview (1).png" id="imgEl"/></div>
     <div id="sword"><img src="swordItem (1).png" id="swordImg"/></div>
-    <button onclick="">press me</button>
+    <button onclick="OtherPage();">press me</button>
 <script type="text/javascript">
 (function() {
 //assorted functions code begin
