--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <div id="LevelTransfer"><img src="portal.png"/></div>
     <div id="img"><img src="char__3_-removebg-preview (1).png" id="imgEl"/></div>
     <div id="sword"><img src="swordItem (1).png" id="swordImg"/></div>
+    <script>
+        function OtherPage() {
+            self.location="part2.html";
+        }
+    </script>
     <button onclick="OtherPage();">press me</button>
 <script type="text/javascript">
 (function() {
@@ -26,9 +31,6 @@ function DOMelementOverlapCheck(div1, div2) {
   );
 }
 
-function OtherPage() {
-    self.location="part2.html";
-}
 //assorted functions code end
 
 //assorted variable defenitions code begin
