--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@ document.onkeydown = function(event) {
         document.getElementById("sword").style.display='none';
         document.getElementById("imgEl").src="char (4) (2).png";
       	console.log("DOM overlap detected");
-        setTimeout(waitTest, 3000);
+        function AnimPart1() 
+        {
+          alert("hello")
+        }
+        setTimeout(AnimPart1, 2000);      
       }
     break;
     case 38:
@@ -72,7 +76,11 @@ document.onkeydown = function(event) {
         document.getElementById("sword").style.display='none';
         document.getElementById("imgEl").src="char (4) (2).png";
       	console.log("DOM overlap detected");
-        setTimeout(waitTest, 3000);
+        function AnimPart1() 
+        {
+          alert("hello")
+        }
+        setTimeout(AnimPart1, 2000);
       }
     break;
     case 39:
@@ -87,6 +95,11 @@ document.onkeydown = function(event) {
         document.getElementById("sword").style.display='none';
         document.getElementById("imgEl").src="char (4) (2).png";
       	console.log("DOM overlap detected");
+        function AnimPart1() 
+        {
+          alert("hello")
+        }
+        setTimeout(AnimPart1, 2000);
       }
     break;
     case 40:
@@ -102,7 +115,11 @@ document.onkeydown = function(event) {
         document.getElementById("imgEl").src="char (4) (2).png";
       	console.log("DOM overlap detected");
         setTimeout(wait1 = true, 100000)
-        setTimeout(waitTest, 3000);
+        function AnimPart1() 
+        {
+          alert("hello")
+        }
+        setTimeout(AnimPart1, 2000);
       }
     break;
   }
