added part 2 to anim

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ document.onkeydown = function(event) {
       	console.log("DOM overlap detected");
         function AnimPart1() 
         {
-          alert("hello")
+          document.getElementById("imgEl").src="char (6).png";
         }
         setTimeout(AnimPart1, 2000);      
       }
@@ -78,7 +78,7 @@ document.onkeydown = function(event) {
       	console.log("DOM overlap detected");
         function AnimPart1() 
         {
-          alert("hello")
+          document.getElementById("imgEl").src="char (6).png";
         }
         setTimeout(AnimPart1, 2000);
       }
@@ -97,7 +97,7 @@ document.onkeydown = function(event) {
       	console.log("DOM overlap detected");
         function AnimPart1() 
         {
-          alert("hello")
+          document.getElementById("imgEl").src="char (6).png";
         }
         setTimeout(AnimPart1, 2000);
       }
@@ -117,7 +117,7 @@ document.onkeydown = function(event) {
         setTimeout(wait1 = true, 100000)
         function AnimPart1() 
         {
-          alert("hello")
+          document.getElementById("imgEl").src="char (6).png";
         }
         setTimeout(AnimPart1, 2000);
       }
