made dude go away

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ document.onkeydown = function(event) {
         function AnimPart1() 
         {
           document.body.style.backgroundImage = "url('blank.png')";
+          div.style.visibility= 'hidden';
         }
         setTimeout(AnimPart1, 2000);      
       }
@@ -79,6 +80,7 @@ document.onkeydown = function(event) {
         function AnimPart1() 
         {
           document.body.style.backgroundImage = "url('blank.png')";
+          div.style.visibility= 'hidden';
         }
         setTimeout(AnimPart1, 2000);
       }
@@ -98,6 +100,7 @@ document.onkeydown = function(event) {
         function AnimPart1() 
         {
           document.body.style.backgroundImage = "url('blank.png')";
+          div.style.visibility= 'hidden';
         }
         setTimeout(AnimPart1, 2000);
       }
@@ -118,6 +121,7 @@ document.onkeydown = function(event) {
         function AnimPart1() 
         {
           document.body.style.backgroundImage = "url('blank.png')";
+          div.style.visibility= 'hidden';
         }
         setTimeout(AnimPart1, 2000);
       }
