try open subpage js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ function waitTest() {
 //assorted variable defenitions code begin
 const SwordCollect = document.getElementById("sword")
 const Portal = document.getElementById("LevelTransfer");
-var SwordCollectCollected = false;
+var SwordCollectCollected = false
 var wait1 = false;
 var wait2 = false;
 var wait3 = false;
@@ -61,6 +61,11 @@ document.onkeydown = function(event) {
         {
           document.body.style.backgroundImage = "url('blank.png')";
           div.style.visibility= 'hidden';
+          function LoadLv2() 
+          {
+            self.location="l2.html";
+          }
+          setTimeout(LoadLv2, 1500);
         }
         setTimeout(AnimPart1, 2000);      
       }
@@ -81,6 +86,11 @@ document.onkeydown = function(event) {
         {
           document.body.style.backgroundImage = "url('blank.png')";
           div.style.visibility= 'hidden';
+          function LoadLv2() 
+          {
+            self.location="l2.html";
+          }
+          setTimeout(LoadLv2, 1500);
         }
         setTimeout(AnimPart1, 2000);
       }
@@ -101,6 +111,11 @@ document.onkeydown = function(event) {
         {
           document.body.style.backgroundImage = "url('blank.png')";
           div.style.visibility= 'hidden';
+          function LoadLv2() 
+          {
+            self.location="l2.html";
+          }
+          setTimeout(LoadLv2, 1500);
         }
         setTimeout(AnimPart1, 2000);
       }
@@ -117,11 +132,15 @@ document.onkeydown = function(event) {
         document.getElementById("sword").style.display='none';
         document.getElementById("imgEl").src="char (4) (2).png";
       	console.log("DOM overlap detected");
-        setTimeout(wait1 = true, 100000)
         function AnimPart1() 
         {
           document.body.style.backgroundImage = "url('blank.png')";
           div.style.visibility= 'hidden';
+          function LoadLv2() 
+          {
+            self.location="l2.html";
+          }
+          setTimeout(LoadLv2, 1500);
         }
         setTimeout(AnimPart1, 2000);
       }
