testing html element with a class

--- a/l2.html
+++ b/l2.html
@@ -1,12 +1,11 @@
-<html>
+<html class = "l2">
     <head>
-        <title>
-            hi
-        </title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, inital-scale=1.0" />
+        <title>RPG Webgame Testing</title>
+        <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1>
-            HI
-        </h1>
+
     </body>
 </html>
