--- a/l2.html
+++ b/l2.html
@@ -1,11 +1,11 @@
-<html class = "l2">
+<html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, inital-scale=1.0" />
         <title>RPG Webgame Testing</title>
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
-    <body>
+    <body class = "l2">
 
     </body>
 </html>
