--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>RPG Webgame Testing</title>
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+<body class = "l1">
     <div id="img"><img src="char__3_-removebg-preview (1).png" id="imgEl"/></div>
     <div id="sword"><img src="swordItem (1).png" id="swordImg"/></div>
 <script type="text/javascript">
