fixed background again (finally :< )

--- a/l2.html
+++ b/l2.html
@@ -3,9 +3,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, inital-scale=1.0" />
         <title>RPG Webgame Testing</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="l2Style.css" rel="stylesheet" type="text/css">
     </head>
     <body class = "l2">
-
+        <div id="img"><img src="char (4) (2).png" id="imgEl"/></div>
     </body>
 </html>
