fixed ISC retrieval for l2

--- a/l2.html
+++ b/l2.html
@@ -6,7 +6,7 @@
         <link href="l2Style.css" rel="stylesheet" type="text/css">
         <script type="text/javascript" src="path-to-javascript-file.js"></script>
     </head>
-    <body class = "l2">
+    <body class = "l2" onload="getISC()">
         <div id="img"><img src="char (4) (2).png" id="imgEl"/></div>
         <script type="text/javascript">
             (function() {
