--- a/l2.html
+++ b/l2.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, inital-scale=1.0" />
         <title>RPG Webgame Testing</title>
         <link href="l2Style.css" rel="stylesheet" type="text/css">
-        <script type="text/javascript" src="path-to-javascript-file.js"></script>
+        <script type="text/javascript" src="ISC.js"></script>
     </head>
     <body class = "l2" onload="getISC()">
         <div id="img"><img src="char (4) (2).png" id="imgEl"/></div>
