--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ document.onkeydown = function(event) {
           div.style.visibility= 'hidden';
           function LoadLv2() 
           {
-            self.location="l2.html/#foo";
+            self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -86,7 +86,7 @@ document.onkeydown = function(event) {
           div.style.visibility= 'hidden';
           function LoadLv2() 
           {
-            self.location="l2.html/#foo";
+            self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -111,7 +111,7 @@ document.onkeydown = function(event) {
           div.style.visibility= 'hidden';
           function LoadLv2() 
           {
-            self.location="l2.html/#foo";
+            self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -136,7 +136,7 @@ document.onkeydown = function(event) {
           div.style.visibility= 'hidden';
           function LoadLv2() 
           {
-            self.location="l2.html/#foo";
+            self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
         }
