--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="style.css" rel="stylesheet" type="text/css">
   <script type="text/javascript" src="ISC.js"></script>
 </head>
-<body class = "l1" onload="ISCtest()">
+<body class = "l1">
     <div id="img"><img src="char__3_-removebg-preview (1).png" id="imgEl"/></div>
     <div id="sword"><img src="swordItem (1).png" id="swordImg"/></div>
 <script type="text/javascript">
@@ -61,6 +61,7 @@ document.onkeydown = function(event) {
           div.style.visibility= 'hidden';
           function LoadLv2() 
           {
+            document.cookie = "hello";
             self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
@@ -86,6 +87,7 @@ document.onkeydown = function(event) {
           div.style.visibility= 'hidden';
           function LoadLv2() 
           {
+            document.cookie = "hello";
             self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
@@ -111,6 +113,7 @@ document.onkeydown = function(event) {
           div.style.visibility= 'hidden';
           function LoadLv2() 
           {
+            document.cookie = "hello";
             self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
@@ -136,6 +139,7 @@ document.onkeydown = function(event) {
           div.style.visibility= 'hidden';
           function LoadLv2() 
           {
+            document.cookie = "hello";
             self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
