--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ document.onkeydown = function(event) {
           div.style.visibility= 'hidden';
           function LoadLv2() 
           {
-            document.cookie = "hello";
+            document.cookie = xAxis;
             self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
@@ -87,7 +87,7 @@ document.onkeydown = function(event) {
           div.style.visibility= 'hidden';
           function LoadLv2() 
           {
-            document.cookie = "hello";
+            document.cookie = xAxis;
             self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
@@ -113,7 +113,7 @@ document.onkeydown = function(event) {
           div.style.visibility= 'hidden';
           function LoadLv2() 
           {
-            document.cookie = "hello";
+            document.cookie = xAxis;
             self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
@@ -139,7 +139,7 @@ document.onkeydown = function(event) {
           div.style.visibility= 'hidden';
           function LoadLv2() 
           {
-            document.cookie = "hello";
+            document.cookie = xAxis;
             self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
