--- a/l2.html
+++ b/l2.html
@@ -7,6 +7,7 @@
       <script id="ReadCookies">
         let x = document.cookie;
         console.log(x);
+        document.cookie = xAxis + "; expires=Thu, 01 Jan 1970 00:00:00 UTC;";
       </script>
     </head>
     <body class = "l2">
