x axis for dynamic positioning set for base

--- a/l2.html
+++ b/l2.html
@@ -8,13 +8,16 @@
         let x = document.cookie;
         console.log(x);
         document.cookie = x + "; expires=Thu, 01 Jan 1970 00:00:00 UTC;";
+        function setXcookie() {
+          document.getElementById("img").style.left = x;
+        }
       </script>
     </head>
-    <body class = "l2">
+    <body class = "l2" onload="setXcookie();">
         <div id="img"><img src="char (4) (2).png" id="imgEl"/></div>
         <script type="text/javascript">
             (function() {
-              var xAxis = 100;
+              var xAxis = x;
               var yAxis = 10;
               const moveSpeed = 10;
               const div = document.getElementById('img');
