change function name

--- a/l2.html
+++ b/l2.html
@@ -8,12 +8,12 @@
         let x = document.cookie;
         console.log(x);
         document.cookie = x + "; expires=Thu, 01 Jan 1970 00:00:00 UTC;";
-        function setXcookie() {
+        function setXbycookie() {
           document.getElementById("img").style.left = x;
         }
       </script>
     </head>
-    <body class = "l2" onload="setXcookie();">
+    <body class = "l2" onload="setXbycookie();">
         <div id="img"><img src="char (4) (2).png" id="imgEl"/></div>
         <script type="text/javascript">
             (function() {
