parsing x as a float for l2.html

--- a/l2.html
+++ b/l2.html
@@ -17,7 +17,7 @@
         <div id="img"><img src="char (4) (2).png" id="imgEl"/></div>
         <script type="text/javascript">
             (function() {
-              var xAxis = x;
+              var xAxis = parseFloat(x);
               var yAxis = 10;
               const moveSpeed = 10;
               const div = document.getElementById('img');
