--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ document.onkeydown = function(event) {
           function LoadLv2() 
           {
             document.cookie = xAxis;
+            document.cookie = yAxis;
             self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
@@ -88,6 +89,7 @@ document.onkeydown = function(event) {
           function LoadLv2() 
           {
             document.cookie = xAxis;
+            document.cookie = yAxis;
             self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
@@ -114,6 +116,7 @@ document.onkeydown = function(event) {
           function LoadLv2() 
           {
             document.cookie = xAxis;
+            document.cookie = yAxis;
             self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
@@ -140,6 +143,7 @@ document.onkeydown = function(event) {
           function LoadLv2() 
           {
             document.cookie = xAxis;
+            document.cookie = yAxis;
             self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
