testing dual parsing for cookies

--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@ document.onkeydown = function(event) {
           div.style.visibility= 'hidden';
           function LoadLv2() 
           {
-            document.cookie = xAxis;
-            document.cookie = yAxis;
+            document.cookie = xAxis + "-" + yAxis;
             self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
@@ -89,7 +88,6 @@ document.onkeydown = function(event) {
           function LoadLv2() 
           {
             document.cookie = xAxis;
-            document.cookie = yAxis;
             self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
@@ -116,7 +114,6 @@ document.onkeydown = function(event) {
           function LoadLv2() 
           {
             document.cookie = xAxis;
-            document.cookie = yAxis;
             self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
@@ -143,7 +140,6 @@ document.onkeydown = function(event) {
           function LoadLv2() 
           {
             document.cookie = xAxis;
-            document.cookie = yAxis;
             self.location="l2.html";
           }
           setTimeout(LoadLv2, 1500);
