--- a/l2.html
+++ b/l2.html
@@ -5,11 +5,15 @@
       <title>RPG Webgame Testing</title>
       <link href="l2Style.css" rel="stylesheet" type="text/css">
       <script id="ReadCookies">
-        let x = document.cookie;
-        console.log(x);
-        document.cookie = x + "; expires=Thu, 01 Jan 1970 00:00:00 UTC;";
+        let xy = document.cookie;
+        document.cookie = xy + "; expires=Thu, 01 Jan 1970 00:00:00 UTC;";
+        function QuickMath(xOrY){
+          if (xOrY === "x" || xOrY === "X") {
+            return xy[0] * 100 + xy[1] * 10 + xy[2];
+          }
+        }
         function setXbycookie() {
-          document.getElementById("img").style.left = x;
+          document.getElementById("img").style.left = QuickMath(y);
         }
       </script>
     </head>
@@ -17,7 +21,7 @@
         <div id="img"><img src="char (4) (2).png" id="imgEl"/></div>
         <script type="text/javascript">
             (function() {
-              var xAxis = parseFloat(x);
+              var xAxis = parseFloat(xy);
               var yAxis = 10;
               const moveSpeed = 10;
               const div = document.getElementById('img');
