fixed function declaration bug for l2

--- a/l2.html
+++ b/l2.html
@@ -17,7 +17,7 @@
           }
         }
         function setXbycookie() {
-          document.getElementById("img").style.left = QuickMath(x);
+          document.getElementById("img").style.left = QuickMath("x");
         }
       </script>
     </head>
