testing full functionality dual cookie float parsing for l2.html

--- a/l2.html
+++ b/l2.html
@@ -13,11 +13,13 @@
             return Xreturn[0];
           }
           else if (xOrY === "y" || xOrY === "Y") {
-            return null;
+            const Yreturn = xy.split('-')
+            return Yreturn[1];
           }
         }
         function setXbycookie() {
           document.getElementById("img").style.left = QuickMath("x");
+          document.getElementById("img").style.top = QuickMath("y");
         }
       </script>
     </head>
@@ -25,8 +27,8 @@
         <div id="img"><img src="char (4) (2).png" id="imgEl"/></div>
         <script type="text/javascript">
             (function() {
-              var xAxis = parseFloat(xy);
-              var yAxis = 10;
+              var xAxis = parseFloat(QuickMath("x"));
+              var yAxis = parseFloat(QuickMath("y"));
               const moveSpeed = 10;
               const div = document.getElementById('img');
               document.onkeydown = function(event) {
