--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, inital-scale=1.0" />
+  <meta name="viewport" content="width=device-width" />
   <title>RPG Webgame Testing</title>
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
