--- a/l2.html
+++ b/l2.html
@@ -1,7 +1,7 @@
 <html>
     <head>
       <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, inital-scale=1.0" />
+      <meta name="viewport" content="width=device-width" />
       <title>RPG Webgame Testing</title>
       <link href="l2Style.css" rel="stylesheet" type="text/css">
       <script id="ReadCookies">
@@ -18,7 +18,7 @@
           }
         }
         function setXbycookie() {
-
+          document.getElementById("img").style.left = QuickMath("x");
           document.getElementById("img").style.top = QuickMath("y");
         }
       </script>
