--- a/fight.html
+++ b/fight.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
   <title>RPG Webgame Testing</title>
-  <link href="style.css" rel="stylesheet" type="text/css">
+  <link href="fightHTML.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+  <script>
     
+  </script>
 </body>
