--- a/l2.html
+++ b/l2.html
@@ -22,6 +22,16 @@
         <div id="img"><img src="char (4) (2).png" id="imgEl"/></div>
         <script type="text/javascript">
             (function() {
+              function DOMelementOverlapCheck(div1, div2) {
+                const domRect1 = div1.getBoundingClientRect();
+                const domRect2 = div2.getBoundingClientRect();
+                return !(
+                  domRect1.top > domRect2.bottom ||
+                  domRect1.right < domRect2.left ||
+                  domRect1.bottom < domRect2.top ||
+                  domRect1.left > domRect2.right
+                );
+              }
               var xAxis = parseFloat(QuickMath("x"));
               var yAxis = 450;
               const moveSpeed = 10;
