made enemy for base collision

--- a/l2.html
+++ b/l2.html
@@ -20,6 +20,7 @@
     </head>
     <body class = "l2" onload="setXbycookie();">
         <div id="img"><img src="char (4) (2).png" id="imgEl"/></div>
+        <div id = "nme1"><img src="Fight Assets/3tv8fh-nme.png" /></div>
         <script type="text/javascript">
             (function() {
               function DOMelementOverlapCheck(div1, div2) {
